@@ -3,7 +3,6 @@ package dev.u9g.minecraftdatagenerator.generators;
 import com.google.common.base.CaseFormat;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
-import dev.u9g.minecraftdatagenerator.Main;
 import dev.u9g.minecraftdatagenerator.mixin.MiningToolItemAccessor;
 import dev.u9g.minecraftdatagenerator.util.DGU;
 import dev.u9g.minecraftdatagenerator.util.EmptyBlockView;
@@ -26,13 +25,9 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 public class BlocksDataGenerator implements IDataGenerator {
-
-    private static final Logger logger = Main.LOGGER;
-
     private static List<Item> getItemsEffectiveForBlock(Block block) {
         return Registry.ITEM.stream()
                 .filter(item -> item instanceof ToolItem)
@@ -81,16 +76,16 @@ public class BlocksDataGenerator implements IDataGenerator {
         return propertyObject;
     }
 
-    public static JsonObject generateBlock(Registry<Block> blockRegistry, Block block) {
+    public static JsonObject generateBlock(Block block) {
         JsonObject blockDesc = new JsonObject();
 
         List<BlockState> blockStates = block.getStateManager().getBlockStates();
         BlockState defaultState = block.getDefaultState();
-        Identifier registryKey = blockRegistry.getId(block);
+        Identifier registryKey = Registry.BLOCK.getId(block);
         String localizationKey = block.getTranslationKey();
         List<Item> effectiveTools = getItemsEffectiveForBlock(block);
 
-        blockDesc.addProperty("id", blockRegistry.getRawId(block));
+        blockDesc.addProperty("id", Registry.BLOCK.getRawId(block));
         blockDesc.addProperty("name", Objects.requireNonNull(registryKey).getPath());
         blockDesc.addProperty("displayName", DGU.translateText(localizationKey));
 
@@ -112,8 +107,8 @@ public class BlocksDataGenerator implements IDataGenerator {
         blockDesc.addProperty("filterLight", block.getLightSubtracted(block.getDefaultState(), EmptyBlockView.INSTANCE, BlockPos.ORIGIN));
 
         blockDesc.addProperty("defaultState", Block.getRawIdFromState(defaultState));
-        blockDesc.addProperty("minStateId", Block.getRawIdFromState(blockStates.get(0)));
-        blockDesc.addProperty("maxStateId", Block.getRawIdFromState(blockStates.get(blockStates.size() - 1)));
+        blockDesc.addProperty("minStateId", Block.getRawIdFromState(blockStates.getFirst()));
+        blockDesc.addProperty("maxStateId", Block.getRawIdFromState(blockStates.getLast()));
         JsonArray stateProperties = new JsonArray();
         for (Property<?> property : block.getStateManager().getProperties()) {
             stateProperties.add(generateStateProperty(property));
@@ -136,7 +131,7 @@ public class BlocksDataGenerator implements IDataGenerator {
         JsonArray resultBlocksArray = new JsonArray();
         Registry<Block> blockRegistry = Registry.BLOCK;
         for (Block block : (Iterable<Block>) blockRegistry) {
-            resultBlocksArray.add(generateBlock(blockRegistry, block));
+            resultBlocksArray.add(generateBlock(block));
         }
         return resultBlocksArray;
     }
